# bonhomme

./: .considered.yaml  .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml
.claude/: launch.json
.github/workflows/: considered.yml
crates/bonhomme/: Cargo.toml
crates/bonhomme-core/: Cargo.toml
crates/bonhomme-core/src/: core.rs  lang.rs  lib.rs
crates/bonhomme-core/src/core/: desired_recovery.rs  graph.rs  merge.rs  metadata.rs  models.rs  operation.rs  queries.rs  tests.rs
crates/bonhomme-core/src/lang/: binary.rs  blob.rs  registry.rs
crates/bonhomme-core/src/lang/registry/: recovery.rs  source.rs  tests.rs
crates/bonhomme-csharp/: Cargo.toml
crates/bonhomme-csharp/src/: ids.rs  import.rs  lib.rs  model.rs  recover.rs  render.rs  source.rs  tests.rs  validate.rs
crates/bonhomme-elixir/: Cargo.toml
crates/bonhomme-elixir/src/: ids.rs  import.rs  lib.rs  model.rs  recover.rs  render.rs  source.rs  tests.rs  validate.rs
crates/bonhomme-engine/: Cargo.toml
crates/bonhomme-engine/examples/: turso_spike.rs
crates/bonhomme-engine/migrations/: 0001_initial.sql  0003_slices.sql  0004_source_file_snapshots.sql
crates/bonhomme-engine/src/: lib.rs  materialization.rs  merge.rs  models.rs  rows.rs  turso_tests.rs
crates/bonhomme-engine/src/backend/: mod.rs  postgres.rs  turso.rs
crates/bonhomme-fallback/: Cargo.toml
crates/bonhomme-fallback/src/: ids.rs  json.rs  lib.rs  markdown.rs  toml.rs  treesitter.rs  yaml.rs
crates/bonhomme-fallback/src/markdown/: tests.rs
crates/bonhomme-go/: Cargo.toml
crates/bonhomme-go/go-helper/: calls.go  format.go  go.mod  main.go  model.go  names.go  parse.go
crates/bonhomme-go/src/: import.rs  lib.rs  model.rs  recover.rs  render.rs  source.rs  tests.rs  toolchain.rs  validate.rs
crates/bonhomme-go/src/recover/: base.rs  files.rs  functions.rs  matcher.rs  references.rs  types.rs
crates/bonhomme-markdown/: Cargo.toml
crates/bonhomme-markdown/src/: ids.rs  import.rs  lib.rs  model.rs  recover.rs  render.rs  source.rs  tests.rs  validate.rs
crates/bonhomme-python/: Cargo.toml
crates/bonhomme-python/src/: ids.rs  import.rs  lib.rs  model.rs  recover.rs  render.rs  source.rs  tests.rs  validate.rs
crates/bonhomme-rust/: Cargo.toml
crates/bonhomme-rust/src/: ids.rs  import.rs  lib.rs  model.rs  recover.rs  render.rs  source.rs  tests.rs  validate.rs
crates/bonhomme-ts/: Cargo.toml
crates/bonhomme-ts/src/: diff.rs  import.rs  lib.rs  oxc_parse.rs  parse.rs  render.rs  scanner.rs  source.rs  tests.rs  validate.rs
crates/bonhomme-ts/src/import/: calls.rs
crates/bonhomme-ts/src/recover/: base.rs  matcher.rs  mod.rs  references.rs
crates/bonhomme-ts/src/tests/: recover.rs  render.rs
crates/bonhomme/migrations/: 0002_graph_cache.sql
crates/bonhomme/src/: agents.rs  api.rs  cli.rs  config.rs  core.rs  demo.rs  explorer.rs  format.rs  lang.rs  main.rs  plugins.rs  simulation.rs  storage.rs  ts.rs
crates/bonhomme/src/cli/: commands.rs  files.rs  queries.rs  session.rs  slice_audit.rs
crates/bonhomme/src/demo/: agents.rs  ids.rs  merge.rs  seed.rs  state.rs  types.rs
demo/: README.md  index.html  package-lock.json  package.json
demo/src/: App.css  App.tsx  api.ts  index.css  types.ts
demo/src/components/: AgentEditors.tsx  CodeBlock.css  CodeBlock.tsx  Logs.tsx  MetricsStrip.tsx  SectionHeader.tsx  Toolbar.tsx  Workbench.tsx
demo/src/components/browser/: BranchDashboard.tsx  Browser.tsx  ChangesetReview.tsx  Inspector.tsx  KindIcon.tsx  ReferenceGraph.tsx  SymbolDetail.tsx  SymbolTree.tsx  browser.css  graph.ts
docs/: spec-coverage.md
examples/csharp-basic/order/: OrderService.cs
examples/elixir-basic/lib/: order_service.ex
examples/go-basic/order/: service.go
examples/python-basic/order/: service.py
examples/rust-basic/src/: lib.rs
examples/typescript-basic/src/: OrderService.ts
reports/: coauth-session-plan.md  config-plan.md  core-premise.md  db-browser-plan.md  fallback-handlers-plan.md  go-plugin-plan.md  parser-unification-plan.md  plugin-versioning-plan.md  related-work.md  structural-identity-plan.md  tsdoc-preservation-plan.md
