[workspace]
members = [
    "crates/bonhomme-core",
    "crates/bonhomme-ts",
    "crates/bonhomme-go",
    "crates/bonhomme-rust",
    "crates/bonhomme-python",
    "crates/bonhomme-csharp",
    "crates/bonhomme-elixir",
    "crates/bonhomme-markdown",
    "crates/bonhomme-fallback",
    "crates/bonhomme-engine",
    "crates/bonhomme",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/agorischek/bonhomme"

[workspace.dependencies]
# Internal crates
bonhomme-core = { path = "crates/bonhomme-core" }
bonhomme-ts = { path = "crates/bonhomme-ts" }
bonhomme-go = { path = "crates/bonhomme-go" }
bonhomme-rust = { path = "crates/bonhomme-rust" }
bonhomme-python = { path = "crates/bonhomme-python" }
bonhomme-csharp = { path = "crates/bonhomme-csharp" }
bonhomme-elixir = { path = "crates/bonhomme-elixir" }
bonhomme-markdown = { path = "crates/bonhomme-markdown" }
bonhomme-fallback = { path = "crates/bonhomme-fallback" }
bonhomme-engine = { path = "crates/bonhomme-engine" }

# External crates (features are enabled per-consumer by listing the dependency)
anyhow = "1.0"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
async-trait = "0.1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "migrate"] }
turso = "0.6"
toml = "0.8"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "process", "fs", "time"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.18", features = ["serde", "v4", "v5"] }
proptest = "1.9"
pulldown-cmark = { version = "0.12", default-features = false }
base64 = "0.22"
ignore = "0.4"
tree-sitter = "0.25"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-c-sharp = "0.23.5"
tree-sitter-elixir = "0.3.5"
syn = { version = "2.0", features = ["full", "visit"] }
quote = "1.0"
prettyplease = "0.2"
