[package]
name = "bonhomme-csharp"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bonhomme-core.workspace = true
anyhow.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
tree-sitter.workspace = true
tree-sitter-c-sharp.workspace = true

[dev-dependencies]
chrono.workspace = true
