[package]
name = "bonhomme-elixir"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
bonhomme-core.workspace = true
serde_json.workspace = true
tokio.workspace = true
tree-sitter.workspace = true
tree-sitter-elixir.workspace = true
uuid.workspace = true

[dev-dependencies]
chrono.workspace = true
