[package]
name = "bonhomme-markdown"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bonhomme-core.workspace = true
anyhow.workspace = true
serde_json.workspace = true
uuid.workspace = true
pulldown-cmark.workspace = true

[dev-dependencies]
chrono.workspace = true
