[package]
name = "bonhomme-ts"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bonhomme-core.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
oxc_allocator = "0.137.0"
oxc_ast = "0.137.0"
oxc_parser = "0.137.0"
oxc_span = "0.137.0"

[dev-dependencies]
chrono.workspace = true
