[package]
name = "bonhomme"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bonhomme-core.workspace = true
bonhomme-ts.workspace = true
bonhomme-go.workspace = true
bonhomme-rust.workspace = true
bonhomme-python.workspace = true
bonhomme-csharp.workspace = true
bonhomme-fallback.workspace = true
bonhomme-engine.workspace = true
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
dotenvy.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
toml.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
chrono.workspace = true
